# future-event-remainder

./: README.md  pyproject.toml
notebooks/: 01-setup-executed.ipynb  02-rag.ipynb
